--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ toDo.txt
 atlassian-ide-plugin.xml
 *.ipr
 *.iws
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
